docker compose adjustments

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -11,9 +11,7 @@ services:
 
   # web container
   web:
-    build:
-      context: ../
-      dockerfile: api_yamdb/Dockerfile
+    image: inferno2f/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
