--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
     image: inferno2f/api_yamdb:latest
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/app/api_yamdb/static/
+      - media_value:/app/api_yamdb/media/
     depends_on:
       - db
     env_file:
