--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -71,7 +71,7 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
           sudo docker-compose exec web python manage.py migrate
-          echo yes | sudo docker-compose exec web python manage.py collectstatic
+          sudo docker-compose exec -T web python manage.py collectstatic --no-input
 
   send_telegram_message:
     runs-on: ubuntu-latest
