--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,28 @@ autopep8==1.6.0
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.7
+coreapi==2.3.3
+coreschema==0.0.4
 Django==2.2.16
 django-csvimport==2.16
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
+drf-yasg==1.20.0
+gunicorn==20.0.4
 idna==3.3
+inflection==0.5.1
 iniconfig==1.1.1
 isort==5.10.1
+itypes==1.2.0
+Jinja2==3.0.3
 lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
 mccabe==0.6.1
 packaging==21.2
 platformdirs==2.4.0
 pluggy==0.13.1
+psycopg2-binary==2.8.6
 py==1.10.0
 pycodestyle==2.8.0
 PyJWT==2.3.0
@@ -27,10 +36,11 @@ pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 pytz==2021.3
 requests==2.26.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 sqlparse==0.4.2
 toml==0.10.2
 typing-extensions==3.10.0.2
+uritemplate==4.1.1
 urllib3==1.26.7
 wrapt==1.13.3
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
